add companies count at index top

--- a/app/assets/stylesheets/company.index.less
+++ b/app/assets/stylesheets/company.index.less
@@ -1,3 +1,12 @@
+.companies-count {
+    background: #F9F9F9 image-url('layout/background_body.png');
+    margin: -5px 2px 20px 0;
+    .border-radius();
+    padding: 15px;
+    .box-shadow(inset 0 0 10px rgba(0,0,0,.5));
+    font-size: 1.2em;
+}
+
 .search-results {
     list-style: none;
     margin: -10px;
