hide add this if js is disabled

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -98,6 +98,7 @@ html, body {
                         text-decoration: none; }}
 
                 .addthis {
+                    display: none;
                     position: absolute;
                     right: 10px;
                     top: 40px;
