--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,8 +6,8 @@ html
         title = page_title
         = csrf_meta_tag
         = favicon_link_tag
-        = stylesheet_link_tag 'fonts/fonts'
-        = stylesheet_link_tag 'application'
+        = stylesheet_link_tag 'fonts/open_sans'
+        = stylesheet_link_tag 'manifest'
         == render partial: './metrics'
         /[if lt IE 9]
             = javascript_include_tag 'html5'
@@ -15,8 +15,9 @@ html
         div.main-container
             header
                 div.container
-                    h1 = link_to image_tag('layout/logo.png', alt: 'sirva.me'), root_path, title: page_title
-                    == render partial: './navigation'
+                    h1 = link_to image_tag('layout/logo.png', alt: page_title), root_path, title: page_title
+                    ul.navigation
+                        li = link_to ENV['SMTP_ADDRESS'], 'mailto:fale-com@sirva.me', title: 'Envie-nos um E-mail. Ficaremos Felizes!'
             section.body
                 == yield
             footer
