--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -16,7 +16,7 @@
 				<p class="title">Nenhuma empresa foi encontrada.</p>
 				<p class="instructions">
 					Por favor, verifique os termos digitados e tente novamente. Caso a empresa que procura não esteja cadastrada, envie-nos um e-mail e iremos cadastrá-la para você:
-					<a href="mailto:fale-com@sirva.me" title="Envie-nos um E-mail. Ficaremos Felizes!">fale-com@sirva.me</a>
+					<a href="mailto:fale-com@sirva.me" title="Envie-nos um e-mail. Ficaremos felizes!">fale-com@sirva.me</a>
 				</p>
 		</li>
 	<% end %>
