--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,12 @@ body {
 }
 
 a, a:active, a:visited, a:hover {
+  font-weight: bold;
   color: #FFF;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 .main-container {
@@ -60,70 +65,65 @@ nav li {
   padding: 0 15px;
 }
 
-nav a {
-  font-weight: bold;
-}
-
 .search {
   background: #FFF url('layout/background_body_header.png') repeat-x;
   height: 143px;
 }
 
 .search h3 {
-  padding: 23px 0 10px;
+  padding: 27px 0 8px;
   width: 690px;
-  font-size: 25px;
+  font-size: 1.8em;
   color: #FFF;
 }
 
 /* Twitter Bootstrap */
-  .search input[type=text] {
-    float: left;
-    padding: 10px;
-    width: 570px;
-    height: 18px;
-    font-family: inherit;
-    font-size: 1.3em;
-    color: inherit;
+.search input[type=text] {
+  float: left;
+  padding: 10px;
+  width: 570px;
+  height: 18px;
+  font-family: inherit;
+  font-size: 1.3em;
+  color: inherit;
 
-    border: 1px solid #CCC;
-    -webkit-border-radius: 3px 0 0 3px;
-       -moz-border-radius: 3px 0 0 3px;
-            border-radius: 3px 0 0 3px;
-    -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
-       -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
-            box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
-    -webkit-transition: border linear .2s, box-shadow linear .2s;
-       -moz-transition: border linear .2s, box-shadow linear .2s;
-        -ms-transition: border linear .2s, box-shadow linear .2s;
-         -o-transition: border linear .2s, box-shadow linear .2s;
-            transition: border linear .2s, box-shadow linear .2s;
-  }
+  border: 1px solid #CCC;
+  -webkit-border-radius: 3px 0 0 3px;
+     -moz-border-radius: 3px 0 0 3px;
+          border-radius: 3px 0 0 3px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+     -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+          box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+  -webkit-transition: border linear .2s, box-shadow linear .2s;
+     -moz-transition: border linear .2s, box-shadow linear .2s;
+      -ms-transition: border linear .2s, box-shadow linear .2s;
+       -o-transition: border linear .2s, box-shadow linear .2s;
+          transition: border linear .2s, box-shadow linear .2s;
+}
 
-  input[type=text]:focus {
-    border-color: rgba(82,168,236,.8);
-    outline: 0;
-    outline: thin dotted \9; /* IE6-9 */
-    -webkit-box-shadow: ~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)";
-       -moz-box-shadow: ~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)";
-            box-shadow: ~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)";
-  }
+.search input[type=text]:focus {
+  border-color: rgba(82,168,236,.8);
+  outline: 0;
+  outline: thin dotted \9; /* IE6-9 */
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
+     -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
+          box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
+}
 
-  .input-append .add-on {
-    display: inline-block;
-    padding: 4px 5px;
-    height: 23px;
-    font-weight: normal;
-    text-align: center;
-    text-shadow: 0 1px 0 #FFF;
-    vertical-align: middle;
-    background-color: #CCC;
-    border: 1px solid #CCC;
-    margin-left: -1px;
-    -webkit-border-radius: 0;
-       -moz-border-radius: 0;
-            border-radius: 0;
-  }
+.search .add-on {
+  display: inline-block;
+  padding: 4px 8px;
+  width: 27px;
+  height: 30px;
+  text-shadow: 0 1px 0 #FFF;
+  background-color: #F5F5F5;
+  border: 1px solid #CCC;
+  margin-right: 0;
+  margin-left: -1px;
+  -webkit-border-radius: 0 3px 3px 0;
+     -moz-border-radius: 0 3px 3px 0;
+          border-radius: 0 3px 3px 0;
+}
 /* End */
 
 .addthis {
@@ -144,6 +144,14 @@ nav a {
     padding: 15px 10px 70px;
 }
 
+.main-content a,
+.main-content a:active,
+.main-content a:visited,
+.main-content a:hover {
+  color: #333;
+}
+
+
 footer {
   background: #FFF url('layout/background_footer.png') repeat-x;
   position: absolute;
@@ -155,12 +163,12 @@ footer {
 
 footer .logo {
   position: absolute;
-  top: 16px;
+  top: 15px;
 }
 
 .who {
   position: absolute;
   right: 10px;
-  top: 22px;
-  font-size: 12px;
+  top: 23px;
+  font-size: .8em;
 }
