--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -1,7 +1,7 @@
 header.body.search
     form.container action="/" method='get'
         h3 Encontre o que precisa em Valença:
-        div.input-append
+        div
             input type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: água, pizza, lanchonete, academia... e clique na lupa »'
             span.add-on = image_submit_tag 'layout/zoom_tool.png', alt: 'Encontrar', id: 'submit-search'
         == render partial: './addthis'
