--- a/app/views/company/index.html.slim
+++ b/app/views/company/index.html.slim
@@ -4,8 +4,8 @@ header.body.search
         div
             input type='text' name='encontrar' value="#{normalize_search_params(params[:encontrar])}" placeholder='Exemplos: água, pizza, lanchonete, academia... e clique na lupa »'
             span.add-on = image_submit_tag 'layout/zoom_tool.png', alt: 'Encontrar', id: 'submit-search'
-        == render partial: './addthis'
+        == render 'addthis'
 div.container.main-content
 		div#companies-count
 				== "Já temos um total de <strong>#{Company.count}</strong> empresas cadastradas. E este número vai continuar crescendo..."
-		== render partial: 'search_results'
+		== render 'search_results'
