--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,5 +24,5 @@ html
                 div.container
                     = link_to image_tag('layout/logo1.png', alt: page_title), root_path, title: page_title, class: 'logo'
                     = link_to 'who', 'http://bazzarella.com', target: '_blank', title: 'Felipe Bazzarella', class: 'who'
-        == render partial: './metrics'
+        == render './metrics'
         = javascript_include_tag 'application'
