--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -2,9 +2,9 @@
 	<form action="/" method="get" class="container">
 		<h3>Encontre o que precisa em Valença</h3>
 		<div>
-			<input type="text" name="encontrar" value="<%= normalize_search_params(params[:encontrar]) %>" placeholder="Exemplos: água, pizza, lanchonete, academia... e clique na lupa »" />
+			<input id="search-field" type="text" name="encontrar" value="<%= normalize_search_params(params[:encontrar]) %>" placeholder="Exemplos: água, pizza, lanchonete, academia... e clique na lupa »" />
 			<span class="add-on">
-				<%= image_tag 'layout/zoom_tool.png', alt: 'Encontrar', id: 'submit-search' %>
+				<%= image_submit_tag 'layout/zoom_tool.png', alt: 'Encontrar', id: 'submit-search' %>
 			</span>
 		</div>
 		<%= render 'addthis' %>
