--- a/app/views/company/_header.html.erb
+++ b/app/views/company/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="body company">
 	<div class="container">
-		Header
+		<a href="javascript:void(0)"><span>« Voltar</span> ao Catálogo</a>
 	</div>
 </header>
