--- a/app/views/company/planeta-terra/_sidebar.html.erb
+++ b/app/views/company/planeta-terra/_sidebar.html.erb
@@ -1,3 +1,15 @@
 <aside>
-	Sidebar
+	<dl>
+		<dt>Telefone</dt>
+		<dd>24 2453 1489</dd>
+		<dd>24 2453 6370</dd>
+		<dt>Endereço</dt>
+		<dd><address>Rua Silveira Vargas, 119</address></dd>
+		<dt>Bairro</dt>
+		<dd>Centro</dd>
+		<dt>E-mail</dt>
+		<dd>fbazzarella@gmail.com</dd>
+		<dt>Website</dt>
+		<dd>http://bazzarella.com</dd>
+	</dl>
 </aside>
