--- a/app/views/company/planeta-terra/home.html.erb
+++ b/app/views/company/planeta-terra/home.html.erb
@@ -1,6 +1,6 @@
 <%= render 'company/header' %>
 
-<div class="container main-content">
+<div id="company" class="container main-content">
 	<%= render 'company/planeta-terra/sidebar' %>
 	
 	<h2>Planeta Terra</h2>
