--- a/app/assets/stylesheets/company.index.css
+++ b/app/assets/stylesheets/company.index.css
@@ -106,6 +106,7 @@
   -moz-box-shadow: 1px 1px 5px rgba(100, 100, 100, .5);
   box-shadow: 1px 1px 5px rgba(100, 100, 100, .5);
   color: #666;
+  overflow: hidden;
 }
 
 .result p {
