--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -1,4 +1,4 @@
-<header class="body search">
+<header class="search">
 	<form action="/" method="get" class="container">
 		<h2>Encontre o que precisa em Valença</h2>
 		<div>
@@ -10,7 +10,7 @@
 		<%= render 'addthis' %>
 	</form>
 </header>
-<div class="container main-content">
+<div class="container search main-content">
 	<p id="companies-count">
 		Já temos um total de <strong><%= Company.count %></strong> empresas cadastradas.
 		E este número vai continuar crescendo...
