--- a/app/views/company/planeta-terra/home.html.erb
+++ b/app/views/company/planeta-terra/home.html.erb
@@ -1,7 +1,9 @@
-<%= render 'company/header' %>
-
-<div id="company" class="container main-content">
+<header class="company">
+  <div class="container">
+    <a href="javascript:void(0)"><span>« Voltar</span> ao Catálogo</a>
+    <h2>Planeta Terra</h2>
+  </div>
+</header>
+<div class="container company main-content">
 	<%= render 'company/planeta-terra/sidebar' %>
-	
-	<h2>Planeta Terra</h2>
 </div>
