--- a/app/assets/stylesheets/company.index.css
+++ b/app/assets/stylesheets/company.index.css
@@ -1,9 +1,9 @@
-.search {
+header.search {
   background: #FFF url('layout/background_body_header.png') repeat-x;
   height: 143px;
 }
 
-.search h2 {
+header.search h2 {
   padding: 27px 0 8px;
   width: 690px;
   font-size: 1.8em;
@@ -11,7 +11,7 @@
 }
 
 /* Twitter Bootstrap */
-.search input[type=text] {
+header.search input[type=text] {
   float: left;
   padding: 10px;
   width: 570px;
@@ -34,7 +34,7 @@
           transition: border linear .2s, box-shadow linear .2s;
 }
 
-.search input[type=text]:focus {
+header.search input[type=text]:focus {
   border-color: rgba(82,168,236,.8);
   outline: 0;
   outline: thin dotted \9; /* IE6-9 */
@@ -43,7 +43,7 @@
           box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
 }
 
-.search .add-on {
+header.search .add-on {
   display: inline-block;
   padding: 4px 8px;
   width: 27px;
