change company test name

--- a/app/views/company/selma-santos-imoveis/home.html.erb
+++ b/app/views/company/selma-santos-imoveis/home.html.erb
@@ -1,9 +1,9 @@
 <header class="company">
   <div class="container">
     <a href="javascript:void(0)"><span>« Voltar</span> ao Catálogo</a>
-    <h2>Planeta Terra</h2>
+    <h2>Selma Santos Imóveis</h2>
   </div>
 </header>
 <div class="container company main-content">
-	<%= render 'company/planeta-terra/sidebar' %>
+	<%= render 'company/selma-santos-imoveis/sidebar' %>
 </div>
