--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,19 @@ body {
 }
 
 a, a:active, a:visited, a:hover {
-  font-weight: bold;
+  display: inline-block;
+  padding-bottom: 1px;
   color: #FFF;
+  text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+  border-bottom: 1px dotted;
+  padding-bottom: 0;
+}
+
+.logo a:hover, .logo:hover {
+  border-bottom: none;
 }
 
 .main-container {
@@ -37,6 +44,7 @@ a:hover {
 }
 
 header, footer {
+  color: #FFF;
   text-shadow: 1px 1px 2px #000;
 }
 
@@ -65,8 +73,19 @@ nav li {
   padding: 0 15px;
 }
 
+.addthis {
+  display: none;
+  position: absolute;
+  right: 10px;
+  top: 40px;
+}
+
+.addthis p {
+  margin: 0 0 5px 2px;
+}
+
 .main-content {
-    padding: 15px 10px 70px;
+  padding: 15px 10px 70px;
 }
 
 .main-content a,
