--- a/app/assets/stylesheets/company.show.css
+++ b/app/assets/stylesheets/company.show.css
@@ -1,32 +1,21 @@
 header.company {
-	background: url('layout/background_body_header.png') repeat-x center -136px;
-	padding-top: 15px;
+	background: url('layout/background_header_company.png') repeat-x;
+  height: 101px;
 }
 
-header.company a {
-	display: inline-block;
-	border-bottom: 1px dotted #333;
-	font-weight: normal;
-	text-shadow: 1px 1px 2px #FFF;
-	color: #333;
-}
-
-header.company a:hover {
-	border-bottom: none;
-	padding-bottom: 1px;
-	text-decoration: none;
-}
-
-header.company a span {
-	font-size: 1.2em;
-	font-weight: bold;
+header.company .back-to-catalog {
+  margin: 18px 0 10px;
 }
 
 header.company h2 {
-  width: 550px;
-  height: 45px;
-  font-size: 2.4em;
+  width: 600px;
+  height: 39px;
+  font-size: 2.2em;
   overflow: hidden;
+}
+
+header.company .addthis {
+  top: 18px;
 }
 
 aside {
@@ -34,13 +23,13 @@ aside {
   background: #F9F9F9 url('layout/background_body.png');
   margin-top: 5px;
   -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
   padding: 10px;
   width: 230px;
   -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.5);
-  -moz-box-shadow: inset 0 0 10px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 10px rgba(0,0,0,.5);
+     -moz-box-shadow: inset 0 0 10px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 10px rgba(0,0,0,.5);
 }
 
 dt {
