--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,62 +1,4 @@
-html,body,div,span,applet,object,iframe,
-h1,h2,h3,h4,h5,h6,p,blockquote,pre,hr,
-a,abbr,address,cite,code,
-del,dfn,em,img,ins,kbd,q,s,samp,
-small,strong,sub,sup,tt,var,
-b,u,i,
-dl,dt,dd,ol,ul,li,
-fieldset,form,label,legend,
-table,caption,tbody,tfoot,thead,tr,th,td,
-article,aside,canvas,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,summary,
-time,mark,audio,video{
-	margin:0;
-	padding:0;
-}
-article,aside,details,figcaption,figure,footer,
-header,hgroup,menu,nav,section{
-	display:block;
-}
-h1,h2,h3,h4,h5,h6{
-	font-size:100%;
-}
-table{
-	border-collapse:collapse;
-	border-spacing:0;
-}
-strong,b,mark{
-	font-weight:bold;
-	font-style:inherit;
-}
-em,i,cite,q,address,dfn,var{
-	font-style:normal;
-	font-weight:inherit;
-}
-abbr[title],dfn[title]{
-	cursor:help;
-	border-bottom:1px dotted;
-}
-ins{
-	border-bottom:1px solid;
-}
-a,u,ins{
-	text-decoration:none;
-}
-del,s{
-	text-decoration:line-through;
-}
-pre,code,samp,kbd{
-	font-family:monospace;
-}
-small{
-	font-size:0.75em;
-}
-img{
-	border:none;
-	font-style:italic;
-}
-input,
-select,option,optgroup,
-textarea{
-	font:inherit;
-}
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, fieldset, form, label, legend, ul, table, tbody, tfoot, thead, tr, th, td, article, aside, footer, header, nav, section { margin: 0; padding: 0; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+address {	font-style: normal; }
+img {	border:none; }
