--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="pt-BR" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta property="og:image" content="http://valenca.sirva.me/assets/layout/logo2.png" />
+    <meta property="og:image" content="<%= root_url[0..-2] + image_path('layout/logo2.png') %>" />
     <title><%= page_title %></title>
     <%= csrf_meta_tag %>
     <%= favicon_link_tag %>
