--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,9 @@ a:hover {
   padding-bottom: 0;
 }
 
-.logo a:hover, .logo:hover {
+.logo a:hover,
+.logo:hover,
+.addthis a:hover {
   border-bottom: none;
 }
 
