--- a/app/views/company/_search_results.html.erb
+++ b/app/views/company/_search_results.html.erb
@@ -2,7 +2,7 @@
 	<% if @companies.any? %>
 		<% @companies.each do |company| %>
 			<li data-id="<%= company.id %>" class="<%= company.plan %> result">
-				<%= link_to image_tag('layout/see_details.png', alt: 'Ver detalhes'), company_path(company.username), title: "Ver detalhes de #{company.name}", class: 'see-details' if company.paying? %>
+				<%= link_to image_tag('layout/see_details.png', alt: 'Ver detalhes'), company_path(company.username), title: "Ver detalhes de #{company.name}", class: 'see-details' if company.have_page? %>
 				<div class="data">
 					<p class="name"><%= company.name %></p>
 					<p class="phone"><%= company.phone %></p>
