--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           </nav>
         </div>
       </header>
-      <section class="body">
+      <section>
         <%= yield %>
       </section>
       <footer>
