--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:image" content="<%= root_url[0..-2] + image_path('layout/logo2.png') %>" />
-    <title><%= page_title %></title>
+    <title><%= default_title %></title>
     <%= csrf_meta_tag %>
     <%= favicon_link_tag %>
     <%= stylesheet_link_tag 'fonts/open_sans' %>
@@ -15,7 +15,7 @@
       <header class="main">
         <div class="container">
           <h1 class="logo">
-            <%= link_to image_tag('layout/logo.png', alt: page_title), root_path, title: page_title %>
+            <%= link_to image_tag('layout/logo.png', alt: default_title), root_path, title: default_title %>
           </h1>
           <nav>
             <ul>
@@ -29,7 +29,7 @@
       </section>
       <footer>
         <div class="container">
-          <%= link_to image_tag('layout/logo1.png', alt: page_title), root_path, title: page_title, class: 'logo' %>
+          <%= link_to image_tag('layout/logo1.png', alt: default_title), root_path, title: default_title, class: 'logo' %>
           <%= link_to 'who', 'http://bazzarella.com', target: '_blank', title: 'Felipe Bazzarella', class: 'who' %>
         </div>
       </footer>
