--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="pt-BR" dir="ltr">
   <head>
-    <title><%= default_title %></title>
+    <title><%= default_title yield(:title) %></title>
     <meta charset="utf-8" />
-    <meta name="description" content="<%= default_description %>" />
-    <meta property="og:image" content="<%= default_og_image %>" />
+    <meta name="description" content="<%= default_description yield(:description) %>" />
+    <meta property="og:image" content="<%= default_og_image yield(:og_image) %>" />
     <%= csrf_meta_tag %>
     <%= favicon_link_tag %>
     <%= stylesheet_link_tag 'fonts/open_sans' %>
