add custom meta tags syntax

--- a/app/views/company/selma-santos-imoveis/_sidebar.html.erb
+++ b/app/views/company/selma-santos-imoveis/_sidebar.html.erb
@@ -1,3 +1,8 @@
+<%
+  content_for :title,       'Selma Santos Imóveis'
+  content_for :description, 'Vendemos e avaliamos seu imóvel'
+  content_for :og_image,    'layout/logo.png'
+%>
 <aside>
 	<dl>
 		<dt>Telefone</dt>
