--- a/app/views/pages/sitemap.xml.erb
+++ b/app/views/pages/sitemap.xml.erb
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<urlset
-      xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9
-            http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
 
   <url>
     <loc><%= root_url %></loc>
     <changefreq>daily</changefreq>
   </url>
+  <% @companies.each do |company| -%>
+  <url>
+    <loc><%= root_url[0..-2] + company_path(company.username) -%></loc>
+    <changefreq>daily</changefreq>
+  </url>
+  <% end -%>
 </urlset>
