add back to company page

--- a/app/views/companies/selma-santos-imoveis/home.html.erb
+++ b/app/views/companies/selma-santos-imoveis/home.html.erb
@@ -1,6 +1,6 @@
 <header class="company">
   <div class="container">
-    <%= link_to '« Voltar ao Catálogo', 'javascript:void(0)', class: 'back-to-catalog' %>
+    <%= link_to '« Voltar ao Catálogo', back_to_catalog_url, title: 'Voltar ao catálogo', class: 'back-to-catalog' %>
     <h2>Selma Santos Imóveis</h2>
     <%= render 'addthis' %>
   </div>
