add first contents to company

--- a/app/views/companies/selma-santos-imoveis/_sidebar.html.erb
+++ b/app/views/companies/selma-santos-imoveis/_sidebar.html.erb
@@ -1,20 +1,26 @@
 <%
   content_for :title,       'Selma Santos Imóveis'
   content_for :description, 'Vendemos e avaliamos seu imóvel'
-  content_for :og_image,    'layout/logo.png'
+  content_for :og_image,    'companies/selma-santos-imoveis/logo.png'
 %>
 <aside>
+	<%= image_tag 'companies/selma-santos-imoveis/logo.png', alt: 'Selma Santos Imóveis' %>
 	<dl>
-		<dt>Telefone</dt>
-		<dd>24 2453 1489</dd>
-		<dd>24 2453 6370</dd>
+		<dt>Telefones</dt>
+			<dd>24 2453 1489</dd>
+			<dd>24 2453 6370</dd>
 		<dt>Endereço</dt>
-		<dd><address>Rua Silveira Vargas, 119</address></dd>
-		<dt>Bairro</dt>
-		<dd>Centro</dd>
+			<dd><address>Rua Silveira Vargas, 119, Centro</address></dd>
 		<dt>E-mail</dt>
-		<dd>fbazzarella@gmail.com</dd>
+			<dd>imoveis@selmasantos.com</dd>
 		<dt>Website</dt>
-		<dd>http://bazzarella.com</dd>
+			<dd>http://selmasantos.com</dd>
+		<dt>Perfis</dt>
+			<dd>Facebook</dd>
+			<dd>Twitter</dd>
+		<dt>Categorias</dt>
+			<dd>Imobiliárias</dd>
+		<dt>Tags de Produtos</dt>
+			<dd>imóveis, compra, venda, avaliação, perícia, legalização, casas, apartamentos</dd>
 	</dl>
 </aside>
