--- a/app/views/companies/selma-santos-imoveis/home.html.erb
+++ b/app/views/companies/selma-santos-imoveis/home.html.erb
@@ -7,4 +7,24 @@
 </header>
 <div class="container company main-content">
 	<%= render 'companies/selma-santos-imoveis/sidebar' %>
+  <section>
+    <article class="image cover">
+      <%= image_tag 'companies/selma-santos-imoveis/cover-1.png', alt: 'Bem vindo à Selma Santos Imóveis' %>
+    </article>
+    <article class="text">
+      <h3>Sobre Nós</h3>
+      <p>
+        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
+      </p>
+    </article>
+    <article class="text">
+      <h3>Como Podemos Ajudar</h3>
+      <p>
+        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
+      </p>
+      <p>
+        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
+      </p>
+    </article>
+  </section>
 </div>
