--- a/app/assets/stylesheets/company.show.css
+++ b/app/assets/stylesheets/company.show.css
@@ -21,27 +21,68 @@ header.company .addthis {
 aside {
 	float: right;
   background: #F9F9F9 url('layout/background_body.png');
-  margin-top: 5px;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-  padding: 10px;
-  width: 230px;
+  padding: 15px;
+  width: 220px;
   -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.5);
      -moz-box-shadow: inset 0 0 10px rgba(0,0,0,.5);
           box-shadow: inset 0 0 10px rgba(0,0,0,.5);
 }
 
-dt {
-	margin-top: 20px;
-	font-weight: bold;
+dl {
+  margin: 0;
 }
 
-dt:first-child {
-	margin: 0;
+dt {
+  margin-top: 20px;
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
 dd {
-	margin: 2px 0 0 5px;
-	font-size: .9em;
+  margin: 2px 0 0 5px;
+}
+
+.company section {
+  width: 690px;
+}
+
+.company section:after {
+  content: '.';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+  zoom: 1;
+}
+
+.company article {
+  margin-bottom: 30px;
+}
+
+.company article:last-child {
+  margin-bottom: 0;
+}
+
+.company .image {
+  background-color: #FFF;
+  border: 1px solid #999;
+  padding: 2px;
+}
+
+.company .cover {
+  width: 684px;
+  height: 224px;
+}
+
+.company .text h3 {
+  font-size: 1.6em;
+}
+
+.company .text p {
+  margin: 10px 0;
+  line-height: 1.5em;
+  text-indent: 2em;
 }
