--- a/app/views/companies/selma-santos-imoveis/home.html.erb
+++ b/app/views/companies/selma-santos-imoveis/home.html.erb
@@ -8,7 +8,7 @@
 <div class="container company main-content">
 	<%= render 'companies/selma-santos-imoveis/sidebar' %>
   <section>
-    <article class="image cover">
+    <article class="cover">
       <%= image_tag 'companies/selma-santos-imoveis/cover-1.png', alt: 'Bem vindo à Selma Santos Imóveis' %>
     </article>
     <article class="text">
@@ -16,6 +16,23 @@
       <p>
         Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
       </p>
+    </article>
+    <article class="gallery">
+      <h3>Nossa Loja</h3>
+      <ul>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+        <li><%= image_tag 'companies/selma-santos-imoveis/gallery-1-1.png', alt: 'Nossa Loja' %></li>
+      </ul>
     </article>
     <article class="text">
       <h3>Como Podemos Ajudar</h3>
