--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*= require reset
  *= require_self
  *= require jquery-lionbars
+ *= require fancybox
  *= require company.index
  *= require company.show */
 
