--- a/app/views/companies/selma-santos-imoveis/home.html.erb
+++ b/app/views/companies/selma-santos-imoveis/home.html.erb
@@ -13,11 +13,14 @@
       <% # excluir %>
       <% image = 'companies/selma-santos-imoveis/cover-1.png' %>
 
-      
-      <%= link_to image_tag(image, alt: 'Bem vindo à Selma Santos Imóveis'), image_path(image), title: 'Bem vindo à Selma Santos Imóveis', rel: 'cover' %>
+
+      <%= link_to image_tag(image, alt: 'Vendemos e avaliamos seu imóvel'), image_path(image), title: 'Vendemos e avaliamos seu imóvel', rel: 'cover' %>
     </article>
     <article class="text">
       <h3>Sobre Nós</h3>
+      <p>
+        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
+      </p>
       <p>
         Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
       </p>
@@ -37,35 +40,6 @@
         <li><%= link_to image_tag(image, alt: 'Nossa Loja'), image_path(image), title: 'Nossa Loja 5', rel: 'gallery-1' %></li>
         <li><%= link_to image_tag(image, alt: 'Nossa Loja'), image_path(image), title: 'Nossa Loja 6', rel: 'gallery-1' %></li>
         <li><%= link_to image_tag(image, alt: 'Nossa Loja'), image_path(image), title: 'Nossa Loja 7', rel: 'gallery-1' %></li>
-      </ul>
-    </article>
-    <article class="text">
-      <h3>Como Podemos Ajudar</h3>
-      <p>
-        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
-      </p>
-      <p>
-        Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento. Um texto institucional ou sobre qualquer outro assunto pertinente ao estabelecimento.
-      </p>
-    </article>
-    <article class="cover">
-
-      <% # excluir %>
-      <% image = 'companies/selma-santos-imoveis/cover-1.png' %>
-
-      
-      <%= link_to image_tag(image, alt: 'Bem vindo à Selma Santos Imóveis'), image_path(image), title: 'Bem vindo à Selma Santos Imóveis', rel: 'cover' %>
-    </article>
-    <article class="gallery">
-      <h3>Nossa Loja 2</h3>
-      <ul>
-
-        <% # excluir %>
-        <% image = 'companies/selma-santos-imoveis/gallery-1-1.png' %>
-
-
-        <li><%= link_to image_tag(image, alt: 'Nossa Loja'), image_path(image), title: 'Nossa Loja 8', rel: 'gallery-2' %></li>
-        <li><%= link_to image_tag(image, alt: 'Nossa Loja'), image_path(image), title: 'Nossa Loja 9', rel: 'gallery-2' %></li>
       </ul>
     </article>
   </section>
