change selma santos to guavas

--- a/app/views/companies/guavas/_sidebar.html.erb
+++ b/app/views/companies/guavas/_sidebar.html.erb
@@ -1,10 +1,10 @@
 <%
   content_for :title,       'Selma Santos Imóveis'
   content_for :description, 'Vendemos e avaliamos seu imóvel'
-  content_for :og_image,    'companies/selma-santos-imoveis/logo.png'
+  content_for :og_image,    'companies/guavas/logo.png'
 %>
 <aside>
-	<%= image_tag 'companies/selma-santos-imoveis/logo.png', alt: 'Selma Santos Imóveis' %>
+	<%= image_tag 'companies/guavas/logo.png', alt: 'Selma Santos Imóveis' %>
 	<dl>
 		<dt>Telefones</dt>
 			<dd>24 2453 1489</dd>
